--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,8 @@
 :root {
- 
+  --text-primary: white;
+  --text-secundary: #B3B3B3;
+  --backgroung-primary: #2C2C2C;
+
 }
 
 
@@ -13,6 +16,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: var(--backgroung-primary);
 }
 
 
