--- a/src/app/components/experience/experience.scss
+++ b/src/app/components/experience/experience.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     grid-area: experience;
+    gap: 24px;
 
     p{
         font-size: 18px;
