--- a/src/app/styles/home.scss
+++ b/src/app/styles/home.scss
@@ -5,9 +5,36 @@
     grid-template-rows: repeat(4,auto);
     grid-template-areas: 
     "header"
-    "buttons"
     "experience"
+    "buttons"
     "info";
+    .buttons{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 24px;
+        grid-area: buttons;
+        width: 100%;
+        .primary-button{
+            background: linear-gradient(90deg, #777CF4 2.62%, #F47777 93.38%);
+            width: 325px;
+            height: 55px;
+            border-radius: 24px;
+            border: none;
+            padding: 12px;
+            color: var(--text-primary);
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 30px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            justify-content: center;
+    
+        }
+    }
+    
 
 }
 
