feat: size modifications

--- a/src/app/components/information/information.scss
+++ b/src/app/components/information/information.scss
@@ -5,6 +5,7 @@
     width: 100%;
     gap: 24px;
     grid-area: info;
+    max-width: 500px;
     .languages-info{
         display: flex;
         flex-direction: column;
