--- a/src/app/styles/home.scss
+++ b/src/app/styles/home.scss
@@ -2,6 +2,7 @@
     padding: 40px 32px;
     display: grid;
     gap: 24px;
+    justify-items: center;
     grid-template-rows: repeat(4,auto);
     grid-template-areas: 
     "header"
